Fix text vertical align middle on safari

--- a/src/components/header/headerMobile.scss
+++ b/src/components/header/headerMobile.scss
@@ -11,11 +11,9 @@
 	left: 0;
 	transition: all 0.3s ease-in-out;
 	height: 63px;
-	transform: translateZ(0);
-	-moz-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	-o-transform: translateZ(0);
-	-webkit-transform: translateZ(0);
+	-webkit-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	-webkit-font-smoothing: antialiased; /* seems to do the same in Safari */
 	.nav-button {
 		position: absolute;
